--- a/project/static_dev/css/styles.css
+++ b/project/static_dev/css/styles.css
@@ -50,5 +50,24 @@
 }
 
 .card, .btn, .form-control{
-    border-radius: 6px;
+    border-radius: 2px;
 }
+
+.card{
+    background-color: rgba(251, 251, 251, 0.573)!important;
+
+}
+.fondo{
+    background-image: linear-gradient(180deg, rgba(238, 238, 238, 0.8) 40%, rgba(216, 215, 215, 0.8) 100%);
+    background-color: rgb(245, 245, 245);
+}
+
+.fondo2{
+    background-image: linear-gradient(180deg, rgba(186, 186, 186, 0.632) 100%, rgba(238, 238, 238, 0.8) 40%);
+    background-color: rgb(245, 245, 245);
+}
+
+.bg-card{
+    background-color: rgba(251, 251, 251, 0.527)!important;
+}
+
