--- a/project/templates/components/navbar.html
+++ b/project/templates/components/navbar.html
@@ -1,8 +1,8 @@
 {% load static %}
 
 <div class="container-fluid px-4 text-uppercase">
-    <a class="navbar-brand fs-4 fw-bolder brand" href="{% url 'products:index' %}">
-        <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" class="icon-navbar"> <span>MUNDO CUOTAS</span>
+    <a class="navbar-brand fs-3 fw-bolder brand" href="{% url 'products:index' %}">
+        <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" class="icon-navbar"> MUNDO CUOTAS
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
