Se corrigen vistas y templates

--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -21,7 +21,7 @@
             <p class="lead">
                 La pagina que estas buscando no existe.
               </p>
-            <a href="{% url 'products:index' %}" class="btn btn-secondary">Ir a inicio</a>
+            <a href="{% url 'products:product_list' %}" class="btn btn-secondary">Ir a inicio</a>
         </div>
     </div>
 
