--- a/project/templates/components/contact_footer.html
+++ b/project/templates/components/contact_footer.html
@@ -1,12 +1,12 @@
-<div class="container-fluid p-md-5 p-4 pb-5 fondo">
+<div class="container-fluid p-md-5 p-5 pb-5 fondo">
     <div class="row gx-4 gx-lg-5 revelar">
         <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
                 <div class="card-body text-center">
                     <i class="fas fa-map-marked-alt fa-2x mb-2"></i>
-                    <h4 class="text-uppercase m-0">Dirección</h4>
-                    <a class="text fw-semibold scale text-decoration-none text-black" href="https://www.google.com/maps/place/Ugalde+2159,+Tandil,+Provincia+de+Buenos+Aires/@-37.3001473,-59.1262451,17z/data=!3m1!4b1!4m5!3m4!1s0x9591201804b28063:0x884ad7fac9b10c79!8m2!3d-37.3001473!4d-59.1262451?entry=ttu" target="_blank" rel="nofollow noopener noreferrer">
-                        Ugalde 2159 - Tandil
+                    <hr>
+                    <a class="text fw-semibold scale text-decoration-none text-black" href="https://maps.app.goo.gl/EyFXxrnwVGMubXzHA" target="_blank" rel="nofollow noopener noreferrer">
+                        Azucena 937 - Tandil
                     </a>
                 </div>
             </div>
@@ -14,10 +14,10 @@
         <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
                 <div class="card-body text-center">
-                    <i class="fas fa-envelope fa-2x mb-2"></i>
-                    <h4 class="text-uppercase m-0">Email</h4>
-                    <a class="text fw-semibold scale text-decoration-none text-black" href="mailto:nobodies.tattootandil@gmail.com" target="_blank" rel="nofollow noopener noreferrer">
-                        nobodies.tattootandil@gmail.com
+                    <i class="fas fa-envelope fa-2x"></i>
+                    <hr>
+                    <a class="text fw-semibold scale text-decoration-none text-black" href="mailto:cintiabergquist@hotmail.com" target="_blank" rel="nofollow noopener noreferrer">
+                        cintiabergquist@hotmail.com
                     </a>
                 </div>
             </div>
@@ -25,10 +25,10 @@
         <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
                 <div class="card-body text-center">
-                    <i class="fab fa-whatsapp fa-2x mb-2"></i>
-                    <h4 class="text-uppercase m-0">Whatsapp</h4>
-                    <a class="text fw-semibold scale text-decoration-none text-black" href="https://wa.me/542494271876" target="_blank" rel="nofollow noopener noreferrer">
-                        +54 9 2494 271876
+                    <i class="fab fa-whatsapp fa-2x"></i>
+                    <hr>
+                    <a class="text fw-semibold scale text-decoration-none text-black" href="https://wa.me/542494547860" target="_blank" rel="nofollow noopener noreferrer">
+                        +54 9 2494 547860
                     </a>
                 </div>
             </div>
@@ -36,17 +36,17 @@
     </div>
 </div>
 <div>
-  <iframe
-    id="map-canvas"
-    class="map_part"
-    width="100%"
-    height="300"
-    frameborder="0"
-    scrolling="no"
-    marginheight="0"
-    marginwidth="0"
-    src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=Tandil Ugalde 2159&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-    title="Mapa de Tandil Ugalde 2159"
-  >
-  </iframe>
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.4983945994927!2d-59.17640799999999!3d-37.3070204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959121eb063b125b%3A0xae4a8b9b1c577ce4!2sAzucena%20937%2C%20Tandil%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1721228741085!5m2!1ses-419!2sar" 
+        width="100%" 
+        height="300" 
+        frameborder="0"
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"
+        marginheight="0"
+        marginwidth="0"
+        title="Mapa de Tandil Azucena 937"
+        >
+    </iframe>
 </div>
+
