--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -53,5 +53,10 @@
 
 		{% block scripts %}
 		{% endblock scripts %}
+
+		<style>.card{
+			box-shadow: 3px 3px 5px 0px rgba(199,199,199,0.75);
+-webkit-box-shadow: 2px 3px 5px 0px rgba(199,199,199,0.75);
+-moz-box-shadow: 2px 3px 5px 0px rgba(199,199,199,0.75);}</style>
 	</body>
 </html>
