--- a/project/templates/components/footer.html
+++ b/project/templates/components/footer.html
@@ -1,16 +1,15 @@
 {% load static %}
 
-<div class="d-flex flex-wrap justify-content-between align-items-center p-5">
-    <ul class="col-12 nav justify-content-center pb-3 mb-3 fw-semibold">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Productos</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+<div class="d-flex flex-wrap justify-content-between align-items-center px-5 pb-4">
+    <ul class="col-12 nav justify-content-center py-3 mb-3 fw-semibold border-bottom fs-6 text-uppercase">
+        <li class="nav-item"><a href="{% url 'products:product_list' %}" class="nav-link px-2 text-body-secondary">Productos</a></li>
+        <li class="nav-item"><a href="{% url 'products:contact' %}" class="nav-link px-2 text-body-secondary">Contacto</a></li>
     </ul>
 
     <div class="col-md-6 d-flex align-items-start">
       <!--AGREGAR LOGO-->
       <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" style="width: 45px">
+        <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" style="width: 50px">
       </a>
       <span class="mb-3 mb-md-0 text-body-secondary pt-3 fw-normal">&copy; <span id="year"></span> MUNDO CUOTAS</span>
     </div>
