--- a/project/templates/users/message_list.html
+++ b/project/templates/users/message_list.html
@@ -26,12 +26,16 @@
                     <div class="input-group">
                         <input name="consult" class="form-control" type="text" placeholder="Buscar..." />
                         <button class="btn btn-success" id="button-search" type="submit">
-                            <i class="fas fa-search"></i> Buscar
+                            <i class="fas fa-search"></i>
                         </button>
                     </div>
 
                             <div class="form-group">
                                 <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Estado</p>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="3" id="status3">
+                                    <label class="form-check-label" for="status3">Todos</label>
+                                </div> 
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="1" id="status1">
                                     <label class="form-check-label" for="status1">No leidos</label>
