--- a/project/templates/products/products_admin.html
+++ b/project/templates/products/products_admin.html
@@ -6,7 +6,7 @@
         <h1 class="fw-bolder display-5 mb-4 text-uppercase text-center">Productos</h1>
        
         <div class="mb-2">
-            <a class="btn btn-success" href="{% url 'products:product_create' %}" hx-target="#dialog"><i class="fas fa-plus"></i> Agregar</a>
+            <a class="btn btn-success" hx-get="{% url 'products:product_create' %}" hx-target="#dialog"><i class="fas fa-plus"></i> Agregar</a>
             <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
         </div>
     
