--- a/project/templates/products/partials/product_list.html
+++ b/project/templates/products/partials/product_list.html
@@ -1,5 +1,5 @@
 <div class="fondo">
-    <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
+    <button class="btn btn-secondary mt-3 mx-3 mx-md-5 mb-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
     
     <div class="p-3 p-md-5">
         <div class="container mt-2">
