--- a/project/templates/products/partials/product_list_admin.html
+++ b/project/templates/products/partials/product_list_admin.html
@@ -6,7 +6,6 @@
     <th>Categoria</th>
     <th>Estado</th>
     <th>Tipo</th>
-    <th>Fecha</th>
     <th></th>
   </tr>
 {% endblock table_header %}
@@ -16,7 +15,7 @@
     {% for product in object_list %}
     <tr>
       <td>{{ product.name|truncatechars:35 }}</td>
-      <td>{{ product.category }}</td>
+      <td>{{ product.category.parent }} - {{ product.category }}</td>
       <td>
         {% if product.status == 1 %}
           <span class="text-danger">No publicado</span>
@@ -35,7 +34,6 @@
         {% endif %}
       </td>
 
-      <td>{{ product.updated_at|date:"d/m/y H:i" }}</td>
       <td>
         <button class="btn btn-secondary btn-sm" hx-get="{% url 'products:product_detail_admin' product.slug %}" hx-target="#dialog"><i class="fas fa-eye"></i></button>
         <button class="btn btn-success btn-sm" hx-get="{% url 'products:product_update' product.slug %}" hx-target="#dialog"><i class="fas fa-edit"></i></button>
